--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                                                     <li><a href="index-2.html">Home Two</a></li>
                                                 </ul>
                                             </li>
-                                            <li><a href="#about" class="section-link">About uss</a></li>
+                                            <li><a href="#about" class="section-link">About us</a></li>
                                             
                                             <li><a href="#Faq" class="section-link">Faq</a></li>
                                            
